# CnC_Remastered_Multiplatform

./: .travis.yml  CMakeLists.txt  README.md  files.yaml  go.mod
.github/workflows/: win.yaml
REDALERT/: CCINI.H  CDFILE.H  CMakeLists.txt  COMBUF.CPP  COMPAT.H  COMQUEUE.CPP  CONQUER.CPP  CRC.CPP  CRC.H  CRC_TEST.CPP  DISPLAY.CPP  DISPLAY.H  EXTERNS.H  FUNCTION.H  INIT.CPP  INIT_CRC.CPP  INIT_CRC.INL  INLINE.H  INT.CPP  IPXMGR.CPP  LCW.CPP  LCW.H  LCWCOMP.CPP  LCWSTRAW.CPP  LZWPIPE.CPP  LZWPIPE.H  MAPEDIT.CPP  MIXFILE.CPP  MIXFILE.H  MONOC.CPP  MONOC.H  MiscAsm.cpp  NULLDLG.CPP  NULLMGR.CPP  PK.CPP  QUEUE.CPP  RECT.H  RedAlert.vcxproj  SCENARIO.CPP  WINSTUB.CPP
REDALERT/WIN32LIB/: MISC.H  MONO.H  PLATCRC.H  UNICODE.H  UNICODE_TEST.CPP
TIBERIANDAWN/: AIRCRAFT.CPP  BUILDING.CPP  CCFILE.CPP  CCFILE.H  CDFILE.CPP  CDFILE.H  CMakeLists.txt  COMBUF.CPP  COMPAT.H  COMQUEUE.CPP  CONQUER.CPP  CONQUER.H  CONQUER_FUN.H  COORD.CPP  CRC.H  DEBUG.CPP  DISPLAY.CPP  DISPLAY.H  DLL.H  DRIVE.CPP  ENDING.CPP  EXIT.H  FATAL.H  FOOT.CPP  FUNCTION.H  INFANTRY.CPP  INIT.CPP  IPXMGR.CPP  JSHELL_FUN.H  LINK.CPP  LOGIC.CPP  MAP.CPP  MIXFILE.CPP  MIXFILE.H  MONOC.CPP  MONOC.H  MiscAsm.cpp  NULLDLG.CPP  NULLMGR.CPP  OBJECT.CPP  (+11 more)
TIBERIANDAWN/WIN32LIB/: CMakeLists.txt  DDRAW.CPP  GBUFFER_TEST.CPP  ICONCACH.H  MISC.H  MONO.H  MOUSE.H  PALETTE.H  PLATCRC.H  UNICODE.H  UNICODE_TEST.CPP  WWSTD.H
TIBERIANDAWN/linuxlib/: FILETEMP.H
TIBERIANDAWN/platformlib/: MEMFLAG.H  PLATCRC.h  PLATDEFINES.H  PLATSTRING.H
cmd/racrc/: calc.go  main.go
cmd/westdb/: main.go  xcc.go
pkg/crc/: crc.go  crc_test.go
pkg/db/: files.go
pkg/file/: file.go
skia/: CMakeLists.txt  buffer.h  gbuffer.cpp  gbuffer.h
(+3 files in other folders)
